syntax = "proto3";

package com.road.yishi.proto.active;

message WishPoolInfoMsg {
  int32 Id = 1;
  int32 buyCount = 2;
  int32 WeekBuyCount = 3;
}
