syntax = "proto3";

package com.road.yishi.proto.active;

message WishPoolReqMsg {
  int32 optype = 1;
  int32 poolId = 2;
}
